# furnituresorter

./: .gitattributes  Dockerfile  README.md  furniture.py
furnituresorter/: LICENSE  pyproject.toml
furnituresorter/src/furnituresorter/: __main__.py  app.py  classifier.py  layers.py  utils.py
furnituresorter/windows/: FurnitureSorter-0.0.1.msi
old/: Furniture-download.ipynb  Furniture-train.ipynb
old/railing-app/app/static/: style.css
railing-app/app/: server.py
railing-app/app/view/: index.html
